--- a/AUTHORS
+++ b/AUTHORS
@@ -1,8 +1,8 @@
 Note: Only lead developers of Hilo will be added here.
 To add your self, append your details to this file in the format:
 
-Your Name <youremail@domaim.com> (@twitter_handle) [http://yourpersonalwebsite.com]
+Your Name <youremail@domaim.com> (@twitter_handle) {@irc_username} [http://yourpersonalwebsite.com]
 
 NO SPAM IS ENCOURAGED
 
-Erik Royall <erikroyall@hotmail.com> (@erikroyall) [http://erikroyall.wordpress.com]
+Erik Royall <erikroyall@hotmail.com> (@erikroyall) {@erikroyall} [http://erikroyall.wordpress.com]
